so the rest of the playlist plays after we pick a song
